force-app/main/default/objects/Grade__c/fields/Grade_Letter__c.field-meta.xml
<CustomField>
    <fullName>Grade_Letter__c</fullName>
    <formula>IF(
  OR(
    ISBLANK(Marks_Obtained__c),
    ISBLANK(Submission__r.Assignment__r.Max_Marks__c),
    Submission__r.Assignment__r.Max_Marks__c = 0
  ),
  &quot;&quot;,
  IF(
    (Marks_Obtained__c / Submission__r.Assignment__r.Max_Marks__c) * 100 &gt;= 90, &quot;A&quot;,
    IF(
      (Marks_Obtained__c / Submission__r.Assignment__r.Max_Marks__c) * 100 &gt;= 80, &quot;B&quot;,
      IF(
        (Marks_Obtained__c / Submission__r.Assignment__r.Max_Marks__c) * 100 &gt;= 70, &quot;C&quot;,
        IF(
          (Marks_Obtained__c / Submission__r.Assignment__r.Max_Marks__c) * 100 &gt;= 60, &quot;D&quot;,
          &quot;F&quot;
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grade Letter</label>
    <type>Text</type>
</CustomField>