force-app/main/default/objects/Grade__c/fields/Graded_By__c.field-meta.xml
<CustomField>
    <fullName>Graded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Graded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Grades</relationshipName>
    <type>Lookup</type>
</CustomField>