force-app/main/default/objects/Grade__c/fields/Graded_Date__c.field-meta.xml
<CustomField>
    <fullName>Graded_Date__c</fullName>
    <label>Graded Date</label>
    <type>Date</type>
</CustomField>