force-app/main/default/objects/Grade__c/fields/Marks_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Marks_Obtained__c</fullName>
    <inlineHelpText>Marks awarded to the student for this submission</inlineHelpText>
    <label>Marks Obtained</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>