force-app/main/default/objects/Grade__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission</label>
    <referenceTo>Submission__c</referenceTo>
    <relationshipLabel>Grades</relationshipLabel>
    <relationshipName>Grades</relationshipName>
    <type>Lookup</type>
</CustomField>