force-app/main/default/objects/Grade__c/validationRules/Grade_Marks_NonNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>Grade_Marks_NonNegative</fullName>
    <active>true</active>
    <errorConditionFormula>Marks_Obtained__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Marks_Obtained__c</errorDisplayField>
    <errorMessage>Marks cannot be negative.</errorMessage>
</ValidationRule>