force-app/main/default/objects/Grade__c/validationRules/Grade_Requires_Submission.validationRule-meta.xml
<ValidationRule>
    <fullName>Grade_Requires_Submission</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Submission__c)</errorConditionFormula>
    <errorDisplayField>Submission__c</errorDisplayField>
    <errorMessage>Grade must be linked to a Submission.</errorMessage>
</ValidationRule>